--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
 		"url": "http://github.com/cferdinandi/tabby"
 	},
 	"devDependencies": {
-		"gulp": "4.0.0",
+		"browser-sync": "^2.27.10",
 		"del": "3.0.0",
-		"lazypipe": "1.0.1",
-		"gulp-flatmap": "1.0.2",
-		"gulp-header": "2.0.5",
-		"gulp-rename": "1.4.0",
-		"jshint": "2.9.6",
-		"gulp-jshint": "2.1.0",
-		"jshint-stylish": "2.2.1",
-		"gulp-concat": "2.6.1",
-		"gulp-terser": "1.1.7",
-		"gulp-optimize-js": "1.1.0",
-		"gulp-sass": "4.0.2",
-		"gulp-cssnano": "2.1.3",
-		"gulp-autoprefixer": "6.0.0",
-		"gulp-svgmin": "2.1.0",
-		"browser-sync": "2.26.3"
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^8.0.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-cssnano": "^2.1.3",
+		"gulp-flatmap": "^1.0.2",
+		"gulp-header": "^2.0.9",
+		"gulp-jshint": "^2.1.0",
+		"gulp-optimize-js": "^1.1.0",
+		"gulp-rename": "^2.0.0",
+		"gulp-sass": "^5.1.0",
+		"gulp-svgmin": "^4.1.0",
+		"gulp-terser": "^2.1.0",
+		"jshint": "^2.13.5",
+		"jshint-stylish": "^2.2.1",
+		"lazypipe": "^1.0.2",
+		"sass": "^1.54.8"
 	}
 }
